workspace/.metadata/.plugins/org.eclipse.cdt.ui/TestCode.build.log
15:07:39 **** Incremental Build of configuration Debug for project TestCode ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\James Kemp/wpilib/cpp/current/include" "-IZ:\\Documents\\Sync\\FIRST\\2018FRC\\workspace\\TestCode\\src" "-IC:\\Users\\James Kemp/wpilib/user/cpp/include" -O0 -Og -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\Pigeon.o" "..\\src\\Pigeon.cpp" 
In file included from C:\Users\James Kemp/wpilib/cpp/current/include/ErrorBase.h:14:0,
                 from C:\Users\James Kemp/wpilib/cpp/current/include/I2C.h:12,
                 from C:\Users\James Kemp/wpilib/cpp/current/include/ADXL345_I2C.h:10,
                 from C:\Users\James Kemp/wpilib/cpp/current/include/WPILib.h:10,
                 from ..\src\Pigeon.cpp:6:
C:\Users\James Kemp/wpilib/cpp/current/include/Base.h:11:1: error: static assertion failed: GCC must be 5 or greater. If building for the roboRIO, please update to the 2018 toolchains.
 static_assert(0,
 ^
..\src\Pigeon.cpp:14:1: error: 'PigeonImu' does not name a type
 PigeonImu * pidgey = new PigeonImu(14);
 ^
..\src\Pigeon.cpp:16:5: error: 'Pigeon' has not been declared
 int Pigeon::NormalizeAngle(int angle){
     ^
..\src\Pigeon.cpp:26:6: error: 'Pigeon' has not been declared
 void Pigeon::ResetYaw(){
      ^
..\src\Pigeon.cpp: In function 'void ResetYaw()':
..\src\Pigeon.cpp:27:2: error: 'pidgey' was not declared in this scope
  pidgey->SetYaw(0.0);
  ^
..\src\Pigeon.cpp: At global scope:
..\src\Pigeon.cpp:30:8: error: 'Pigeon' has not been declared
 double Pigeon::GetYaw(){
        ^
..\src\Pigeon.cpp: In function 'double GetYaw()':
..\src\Pigeon.cpp:32:2: error: 'pidgey' was not declared in this scope
  pidgey->GetYawPitchRoll(ypr_array);
  ^
..\src\Pigeon.cpp: At global scope:
..\src\Pigeon.cpp:36:8: error: 'Pigeon' has not been declared
 double Pigeon::GetFusedHeading(){
        ^
..\src\Pigeon.cpp: In function 'double GetFusedHeading()':
..\src\Pigeon.cpp:37:9: error: 'pidgey' was not declared in this scope
  return pidgey->GetFusedHeading();
         ^
..\src\Pigeon.cpp:38:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^

15:07:41 Build Finished (took 1s.383ms)

